--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -1,10 +1,8 @@
 .app_navbar{
-    /* padding-inline: 6.2rem; */
     height: 100px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    /* position: static; */
 }
 
 .app_navbar_logo img{
@@ -52,7 +50,7 @@
     transform: scale(1);
 }
 
-/* smallscreen navbar  */
+/* ---------smallscreen navbar--------------  */
 
 .nav_smallscreen{
     display: none;
