--- a/src/Components/Testimonials/testimonial.css
+++ b/src/Components/Testimonials/testimonial.css
@@ -17,7 +17,6 @@
 .app_testimonial_container{
     grid-column-gap: 40px;
     grid-row-gap: 40px;
-    /* flex-wrap: wrap; */
     grid-template-rows: auto auto;
     grid-template-columns: 1fr 1fr;
     grid-auto-columns: 1fr;
@@ -31,6 +30,10 @@
     border-radius: 4px;
     padding: 40px;
     position: relative;
+}
+
+.tesimonial_box img{
+    margin-bottom: 16px;
 }
 
 .quote-text{
